--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -1,7 +1,8 @@
 name: integration-test-1
 run-name: ${{ github.actor }} is learning GitHub Actions
 on:
-    workflow_dispatch:
+    pull_request:
+        types: [opened,edited]
 jobs:
     run-inference:
         runs-on: ubuntu-latest
