--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -1,13 +1,20 @@
 name: integration-test-1
-run-name: ${{ github.actor }} is learning GitHub Actions
+
 on:
     pull_request:
-        types: [opened,edited]
+        branches:
+            - master
+
 jobs:
     run-inference:
         runs-on: ubuntu-latest
+
         steps:
-            - uses: webfactory/ssh-agent@v0.9.0
+
+            - name: setup SSH
+              uses: webfactory/ssh-agent@v0.9.0
               with:
                 ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-            - run: ssh root@${{ secrets.TEST_VM }} "python3 /my.py"
+
+            - name: run inference
+              run: ssh root@${{ secrets.TEST_VM }} "python3 /my.py"
