--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -18,4 +18,4 @@ jobs:
                 ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
             - name: run inference
-              run: ssh root@${{ env.TEST_VM }} "python3 /my.py"
+              run: ssh root@52.118.207.5 "python3 /my.py"
