--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -17,8 +17,11 @@ jobs:
             #   with:
             #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
+            - run: touch ./tst
+            - run: ls
+            
             - name: setup
-              run: echo -n ${{ secrets.SSH_PRIVATE_KEY }} > mrt
+              run: echo -n ${{ secrets.SSH_PRIVATE_KEY }} > ./mrt
 
             - name: run inference
-              run: ssh -i mrt root@52.118.207.5 "python3 /my.py"
+              run: ssh -i ./mrt root@52.118.207.5 "python3 /my.py"
