--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -12,24 +12,33 @@ jobs:
 
         steps:
 
-            - run: |
-                cat > /opt/test.py
-
-            # - uses: appleboy/ssh-action@v1.2.0
-            #   with:
-            #     host: ${{ secrets.TEST_VM }}
-            #     username: ${{ secrets.TEST_VM_USERNAME }}
-            #     key: ${{ secrets.SSH_PRIVATE_KEY }}
-            #     script: |
-            #         python3 /opt/my.py
-
             - uses: actions/checkout@v4
-            - uses: cross-the-world/ssh-scp-ssh-pipelines@v1.1.4
+
+            - name: upload test case
+              uses: betanzos/scp-upload@v1.1.0
               with:
                 host: ${{ secrets.TEST_VM }}
-                user: ${{ secrets.TEST_VM_USERNAME }}
+                username: ${{ secrets.TEST_VM_USERNAME }}
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
-                scp: |
-                    './tests/agra/test_1.py' => /opt/test_1.py
-                last_ssh: |
-                    python3 /opt/test_1.py
+                source: './tests/agra/test_1.py'
+                remote_dir: '/opt'
+                recursive: 'false'
+
+            - name: run test case
+              uses: appleboy/ssh-action@v1.2.0
+              with:
+                host: ${{ secrets.TEST_VM }}
+                username: ${{ secrets.TEST_VM_USERNAME }}
+                key: ${{ secrets.SSH_PRIVATE_KEY }}
+                script: |
+                    python3 /opt/my.py
+
+            # - uses: cross-the-world/ssh-scp-ssh-pipelines@v1.1.4
+            #   with:
+            #     host: ${{ secrets.TEST_VM }}
+            #     user: ${{ secrets.TEST_VM_USERNAME }}
+            #     key: ${{ secrets.SSH_PRIVATE_KEY }}
+            #     scp: |
+            #         './tests/agra/test_1.py' => /opt/test_1.py
+            #     last_ssh: |
+            #         python3 /opt/test_1.py
