--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -42,5 +42,5 @@ jobs:
                 username: ${{ secrets.TEST_VM_USERNAME }}
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
                 script: |
-                  # source /opt/.venv-test/bin/activate
-                  python3 /opt/test_1.py
+                  source /opt/.venv-test/bin/activate
+                  python /opt/test_1.py
