--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -24,7 +24,7 @@ jobs:
                 remote_dir: '/opt'
                 recursive: 'false'
 
-            - name: run test case
+            - name: install vllm
               uses: appleboy/ssh-action@v1.2.0
               with  :
                 host: ${{ secrets.TEST_VM }}
@@ -33,7 +33,7 @@ jobs:
                 script: |
                   python3 -m venv /opt/.venv-test
                   source /opt/.venv-test/bin/activate
-                  pip install https://vllm-wheels.s3.us-west-2.amazonaws.com/nightly/vllm-1.0.0.dev-cp38-abi3-manylinux1_x86_64.whl
+                  pip3 install https://vllm-wheels.s3.us-west-2.amazonaws.com/nightly/vllm-1.0.0.dev-cp38-abi3-manylinux1_x86_64.whl
   
             - name: run test case
               uses: appleboy/ssh-action@v1.2.0
@@ -43,4 +43,6 @@ jobs:
                 key: ${{ secrets.SSH_PRIVATE_KEY }}
                 script: |
                   source /opt/.venv-test/bin/activate
-                  python /opt/test_1.py
+                  python3 /opt/test_1.py
+                  deactivate
+                  rm -rf /opt/.venv-test
