--- a/.github/workflows/mk.yml
+++ b/.github/workflows/mk.yml
@@ -14,7 +14,7 @@ jobs:
 
             - uses: actions/checkout@v4
 
-            - name: upload test case
+            - name: upload test cases
               uses: betanzos/scp-upload@v1.1.0
               with:
                 host: ${{ secrets.TEST_VM }}
@@ -35,7 +35,7 @@ jobs:
                   source /opt/.venv-test/bin/activate
                   pip3 install https://vllm-wheels.s3.us-west-2.amazonaws.com/nightly/vllm-1.0.0.dev-cp38-abi3-manylinux1_x86_64.whl
   
-            - name: run test case
+            - name: run test_1.py
               uses: appleboy/ssh-action@v1.2.0
               with:
                 host: ${{ secrets.TEST_VM }}
@@ -44,6 +44,13 @@ jobs:
                 script: |
                   source /opt/.venv-test/bin/activate
                   python3 /opt/test_1.py
-                  deactivate
+
+            - name: cleanup
+              uses: appleboy/ssh-action@v1.2.0
+              with:
+                host: ${{ secrets.TEST_VM }}
+                username: ${{ secrets.TEST_VM_USERNAME }}
+                key: ${{ secrets.SSH_PRIVATE_KEY }}
+                script: |
                   rm -rf /opt/.venv-test
                   rm /opt/test_1.py
